# cmd/vm/router/handler/service.go
@@ -20,8 +20,8 @@ func NewCheckCtrl() *ServiceCtrl {
 // @summary 检测虚拟机服务状态
 // @Accept json
 // @Produce json
-// @Param HostServiceCheckReq body v1.HostServiceCheckReq true "Service Check Request Object"
-// @Success 200 {object} v1.HostServiceCheckResp "code = success | fail"
+// @Param VmServiceCheckReq body v1.VmServiceCheckReq true "Service Check Request Object"
+// @Success 200 {object} v1.VmServiceCheckResp "code = success | fail"
 // @Router /api/v1/service/check [post]
 func (c *ServiceCtrl) Check(ctx iris.Context) {
 	req := v1.VmServiceCheckReq{}
@@ -37,6 +37,12 @@ func (c *ServiceCtrl) Check(ctx iris.Context) {
 	return
 }
 
+// @summary 安装虚拟机服务
+// @Accept json
+// @Produce json
+// @Param VmServiceCheckReq body v1.VmServiceInstallReq true "Service Install Request Object"
+// @Success 200 {object} v1.VmServiceInstallResp "code = success | fail"
+// @Router /api/v1/service/setup [post]
 func (c *ServiceCtrl) Setup(ctx iris.Context) {
 	req := v1.VmServiceInstallReq{}
 	err := ctx.ReadJSON(&req)
