# xdoc/docs/host/swagger.json
@@ -483,11 +483,11 @@
                 "parameters": [
                     {
                         "description": "Service Check Request Object",
-                        "name": "ServiceCheckReq",
+                        "name": "HostServiceCheckReq",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.ServiceCheckReq"
+                            "$ref": "#/definitions/v1.HostServiceCheckReq"
                         }
                     }
                 ],
@@ -495,7 +495,7 @@
                     "200": {
                         "description": "code = success | fail",
                         "schema": {
-                            "$ref": "#/definitions/v1.ServiceCheckResp"
+                            "$ref": "#/definitions/v1.HostServiceCheckResp"
                         }
                     }
                 }
@@ -569,6 +569,34 @@
                                     }
                                 }
                             ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/virtual/getVncAddress": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "根据VNC Token 获取 ip，port",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "VNC Port",
+                        "name": "port",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code = success | fail",
+                        "schema": {
+                            "$ref": "#/definitions/_domain.Response"
                         }
                     }
                 }
@@ -866,6 +894,35 @@
                 }
             }
         },
+        "v1.HostServiceCheckReq": {
+            "type": "object",
+            "properties": {
+                "services": {
+                    "type": "string"
+                }
+            }
+        },
+        "v1.HostServiceCheckResp": {
+            "type": "object",
+            "properties": {
+                "kvm": {
+                    "description": "Enums consts.HostServiceStatus",
+                    "type": "string"
+                },
+                "nginx": {
+                    "description": "Enums consts.HostServiceStatus",
+                    "type": "string"
+                },
+                "novnc": {
+                    "description": "Enums consts.HostServiceStatus",
+                    "type": "string"
+                },
+                "websockify": {
+                    "description": "Enums consts.HostServiceStatus",
+                    "type": "string"
+                }
+            }
+        },
         "v1.ListTaskResp": {
             "type": "object",
             "properties": {
@@ -898,31 +955,6 @@
                     "items": {
                         "$ref": "#/definitions/agentModel.Task"
                     }
-                }
-            }
-        },
-        "v1.ServiceCheckReq": {
-            "type": "object",
-            "properties": {
-                "services": {
-                    "type": "string"
-                }
-            }
-        },
-        "v1.ServiceCheckResp": {
-            "type": "object",
-            "properties": {
-                "kvm": {
-                    "description": "Enums consts.HostServiceStatus",
-                    "type": "string"
-                },
-                "novnc": {
-                    "description": "Enums consts.HostServiceStatus",
-                    "type": "string"
-                },
-                "websockify": {
-                    "description": "Enums consts.HostServiceStatus",
-                    "type": "string"
                 }
             }
         },
@@ -987,7 +1019,7 @@
         "v1.VncTokenResp": {
             "type": "object",
             "properties": {
-                "ip": {
+                "host": {
                     "type": "string"
                 },
                 "port": {
